--- a/header.tex
+++ b/header.tex
@@ -6,7 +6,8 @@
 \usepackage{tabularx}
 \usepackage{cprotect}
 \usepackage{multirow}
-\usepackage{adjustbox}
+%\usepackage{adjustbox}
+\usepackage{units}
 
 \let\oldnl\nl% Store \nl in \oldnl
 \newcommand{\nonl}{\renewcommand{\nl}{\let\nl\oldnl}}% Remove line number for one line
