--- a/figures/CS-debug-ratio/caption.tex
+++ b/figures/CS-debug-ratio/caption.tex
@@ -1,1 +1,1 @@
-\label{fig:CS-debug-ratio} Global average recoverability ratio, defined as weighted average of each function's average recoverability ratio. We used the number of unoptimized LLVM IR instructions as weight.
+\label{fig:CS-debug-ratio} Global average recoverability ratio, defined as weighted average of each function's average recoverability ratio. We used the number of LLVM IR instructions in the unoptimized function version as weight.
