--- a/osr-evaluation.tex
+++ b/osr-evaluation.tex
@@ -248,6 +248,7 @@ We denote by $P$ the pool of variables at OSR source that are used to reconstruc
 \end{enumerate}
 
 \subsection{Experimental Setup}
+\label{ss:bc-exp-setup}
 
 \subsubsection*{Benchmarks and Environment}
 We implemented our technique in \tinyvm, introducing a number of features to:
